--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,18 +1,30 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/09/28 16:44:07 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/09/28 16:46:36 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re
 
 NAME		= yellow_book
 
-SRCS		= yellow_book.cpp	\
-		  Contact.cpp		\
-		  PhoneBook.cpp
+SRCS		= main.cpp			\
+			  Contact.cpp		\
+			  PhoneBook.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
-RM		= rm -f
+RM			= rm -f
 
 all: 		$(NAME)
 
