Update cpp02 - ex03 is done

--- a/cpp02/ex03/Makefile
+++ b/cpp02/ex03/Makefile
@@ -4,7 +4,8 @@ NAME		= my_first_orthodox
 
 SRCS		= main.cpp	\
 		  Fixed.cpp	\
-		  Point.cpp
+		  Point.cpp	\
+		  bsp.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
