Update cpp01 - Update some errors found during correction

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,19 +1,31 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/04 14:59:47 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/04 15:22:51 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re
 
 NAME		= braiinnnzzzz
 
 SRCS		= main.cpp		\
-		  Zombie.cpp		\
-		  newZombie.cpp		\
-		  randomChump.cpp
+			  Zombie.cpp	\
+			  newZombie.cpp	\
+			  randomChump.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
-RM		= rm -f
+RM			= rm -f
 
 all:		$(NAME)
 
@@ -26,4 +38,4 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
