--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -1,19 +1,31 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/04 15:26:08 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/04 19:52:04 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re
 
 NAME		= human_attack
 
 SRCS		= main.cpp	\
-		  Weapon.cpp	\
-		  HumanA.cpp	\
-		  HumanB.cpp
+			  Weapon.cpp	\
+			  HumanA.cpp	\
+			  HumanB.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
-CXXFLAGS	= -Wall -Werror -Wextra
+CXXFLAGS	= -Wall -Werror -Wextra -fsanitize=address -g
 
-RM		= rm -f
+RM			= rm -f
 
 all:		$(NAME)
 
@@ -26,4 +38,4 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
