Update cpp02 - Corrected by peers

--- a/cpp02/ex03/Makefile
+++ b/cpp02/ex03/Makefile
@@ -1,19 +1,31 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/06 16:48:56 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/06 16:49:16 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re
 
 NAME		= my_first_orthodox
 
 SRCS		= main.cpp	\
-		  Fixed.cpp	\
-		  Point.cpp	\
-		  bsp.cpp
+			  Fixed.cpp	\
+			  Point.cpp	\
+			  bsp.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
-RM		= rm -f
+RM			= rm -f
 
 all:		$(NAME)
 
@@ -26,4 +38,4 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
