--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -7,6 +7,7 @@ SRCS		= Animal.cpp		\
 		  Cat.cpp		\
 		  WrongAnimal.cpp	\
 		  WrongCat.cpp		\
+		  Brain.cpp		\
 		  main.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
