--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -1,4 +1,4 @@
-.PHONY:	all clean fclean re
+.PHONY:	all clean fclean re run
 
 NAME		= Aaaaand...
 
@@ -28,3 +28,7 @@ fclean:		clean
 	@ $(RM) $(NAME)
 
 re:		fclean all
+
+run:		all
+	@ clear
+	@ ./$(NAME)
