Update cpp03 - Add 42 Headers - Last Commit before evaluation

--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -1,18 +1,30 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/19 15:55:25 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/19 15:58:37 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re run
 
 NAME		= Aaaaand...
 
 SRCS		= ClapTrap.cpp	\
-		  ScavTrap.cpp	\
-		  main.cpp
+			  ScavTrap.cpp	\
+			  main.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
-RM		= rm -f
+RM			= rm -f
 
 all:		$(NAME)
 
@@ -25,8 +37,8 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
 
-run:		all
+run:		$(NAME)
 	@ clear
 	@ ./$(NAME)
