--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -1,13 +1,25 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/19 15:50:25 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/19 15:50:58 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re run
 
 NAME		= Aaaaand...
 
 SRCS		= ClapTrap.cpp	\
-		  main.cpp
+			  main.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
@@ -24,8 +36,8 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
 
-run:		all
+run:		$(NAME)
 	@ clear
 	@ ./$(NAME)
