Update cpp05 ex02 - Finished

--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -4,8 +4,9 @@ NAME		= bureaucrat
 
 SRCS		= Bureaucrat.cpp		\
 		  Form.cpp			\
-		  ShruberryCreationForm.cpp	\
+		  ShrubberyCreationForm.cpp	\
 		  RobotomyRequestForm.cpp	\
+		  PresidentialPardonForm.cpp	\
 		  main.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
