--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -1,20 +1,32 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/25 14:31:39 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/25 14:32:07 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re run
 
 NAME		= call_animals
 
-SRCS		= Animal.cpp		\
-		  Dog.cpp		\
-		  Cat.cpp		\
-		  Brain.cpp		\
-		  main.cpp
+SRCS		= Animal.cpp	\
+			  Dog.cpp		\
+			  Cat.cpp		\
+			  Brain.cpp		\
+			  main.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
-RM		= rm -f
+RM			= rm -f
 
 all:		$(NAME)
 
@@ -27,7 +39,7 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
 
 run:		all
 	@ clear
