--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -1,21 +1,33 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pgomez-a <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/25 17:14:29 by pgomez-a          #+#    #+#              #
+#    Updated: 2021/10/25 17:15:04 by pgomez-a         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 .PHONY:	all clean fclean re run
 
 NAME		= bureaucrat
 
-SRCS		= Bureaucrat.cpp		\
-		  Form.cpp			\
-		  ShrubberyCreationForm.cpp	\
-		  RobotomyRequestForm.cpp	\
-		  PresidentialPardonForm.cpp	\
-		  main.cpp
+SRCS		= Bureaucrat.cpp				\
+			  Form.cpp						\
+			  ShrubberyCreationForm.cpp		\
+			  RobotomyRequestForm.cpp		\
+			  PresidentialPardonForm.cpp	\
+			  main.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
-CXX		= clang++
+CXX			= clang++
 
 CXXFLAGS	= -Wall -Werror -Wextra
 
-RM		= rm -f
+RM			= rm -f
 
 all:		$(NAME)
 
@@ -28,7 +40,7 @@ clean:
 fclean:		clean
 	@ $(RM) $(NAME)
 
-re:		fclean all
+re:			fclean all
 
 run:		$(NAME)
 	@ clear
