Upload cpp06 ex02 - Finished - Not reviewed - Upload Makefile of ex00 ex01

--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -1,9 +1,9 @@
 .PHONY:	all clean fclean re run
 
-NAME		= serial
+NAME		= identify
 
 SRCS		= main.cpp	\
-		  serial.cpp
+		  utils.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
